# ocpp-csms-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yaml  index.yaml  sqlx.Dockerfile
.sqlx/: query-039f4801a5b8e2f819bdab9986f64b0b951667eb6a25843e92d190138be33567.json  query-0541534c44553eeed40824155d402ae3615305c104f8fb110ab90c3a688a1718.json  query-0e0bfb8b259e42ece5c2eb63ed628ef73cccb33f90197d70a4b75c936c853e29.json  query-1e4f653d209fbbe60f7fdce37fb718abcec2bd876c4bf2865d2f6538210b45a6.json  query-223e3e424a94e7dec88567debbf8f1afa45fdf404e8e4220e185fe65e6ba3a4d.json  query-2a8127b42e6329562825658014365a093f6b2d036d1473da6b708c9995137497.json  query-30cc9945f9f6ed295f0c10711319c8e62612f7863bab1c900e52b26747131166.json  query-37a11364e7cc0885bd083cc08fadc42be5605bd7a06d2e39434366e4b5b22b58.json  query-3afa36a7c883dfa4200cb9d3fa2c2c6f9815fe51243f3448b82f6a5abc20d65a.json  query-3fc7e26476b3e6b097c1c43d43dc1281265d179a33dab65db2e0cd702b7d4779.json  query-519a5b03afe2b28fa7ba388666f25efebdf109655a88d8e479d75401c27b528b.json  query-62aa8d3d5d7c7d2a9a35e5a45c17d46446ebe6e05e5de80e3937b4c99a04bcd6.json  query-6cf82808df3e340b8e078be9c0fd6c3e8340468cd21b5daa766d3d6997c873d8.json  (+14 more)
api/: Cargo.toml  build.rs
api/src/: api_service.rs  main.rs  start_server.rs
book/: book.toml
ocpp/: Cargo.toml  build.rs
ocpp/src/: main.rs
ocpp/src/charger/: charger.rs  charger_authentication_handler.rs  charger_data.rs  charger_factory.rs  charger_model.rs  charger_ocpp1_6_request_receiver.rs  charger_ocpp2_0_1_request_receiver.rs  charger_pool.rs  mod.rs  ocpp1_6interface.rs  ocpp_2_0_interface.rs
ocpp/src/charger/ocpp1_6/: create_transaction_id.rs  handle_meter_values_request.rs  mod.rs  parse_metric_value.rs  update_evse_ampere_from_metric_request.rs  update_evse_voltage_from_metric_request.rs  update_metric.rs
ocpp/src/event/: amqp_event_handler.rs  charging_state.rs  event_handler.rs  event_manager.rs  event_payload.rs  meter_value.rs  mod.rs  transaction_stopped_event.rs
ocpp/src/event/payload/: boot_reason.rs  booted_event.rs  connector_status.rs  connector_status_event.rs  mod.rs
ocpp/src/network_interface/: charger_factory.rs  mod.rs  network_interface.rs  network_interface_handle.rs  ocpp1_6_network_interface_handle.rs  ocpp1_6_request_receiver.rs  ocpp2_0_1_network_interface_handle.rs  ocpp2_0_1_request_receiver.rs  ocpp_protocol.rs  protocol_handle.rs
ocpp/src/network_interface/json/: authentication_handler.rs  mod.rs  ocpp_handler.rs  ocpp_json_network_interface.rs  ocpp_network_interface_handle.rs
ocpp/src/network_interface/json/extract_password/: decode_header_value.rs  extract_password.rs  extract_raw_value_from_header_value.rs  get_encoded_part.rs  mod.rs  parse_authorization_header_value.rs  split_and_get_password.rs
ocpp/src/network_interface/json/handle_new_request/: handle_new_request.rs  handle_new_websocket_connection.rs  handle_websocket_message.rs  mod.rs
ocpp/src/network_interface/json/handle_new_request/ocpp1_6/: handle_ocpp_1_6_call.rs  handle_ocpp_1_6_call_result.rs  handle_ocpp_1_6_error.rs  handle_ocpp_1_6_request.rs  handle_ocpp_1_6_websocket_message.rs  mod.rs  parse_ocpp_1_6_error_payload.rs  perform_ocpp_1_6_call.rs
ocpp/src/network_interface/json/handle_new_request/ocpp2_0_1/: handle_2_0_1_websocket_message.rs  handle_ocpp_2_0_1_call.rs  handle_ocpp_2_0_1_call_result.rs  handle_ocpp_2_0_1_error.rs  handle_ocpp_2_0_1_request.rs  mod.rs  parse_ocpp_2_0_1_error_payload.rs  perform_ocpp_2_0_1_call.rs
ocpp/src/network_interface/json/validate_protocol/: extract_protocol_header.rs  mod.rs  select_protocol.rs  select_protocol_and_handle_response.rs  validate_protocol.rs
ocpp/src/ocpp/: extract_password.rs  extract_protocol_header.rs  handle_message.rs  metrics_handler.rs  mod.rs  ocpp1_6_configuration.rs  ocpp_handler.rs  ocpp_protocol.rs  select_protocol.rs  select_protocol_and_handle_response.rs  start_ocpp_server.rs  validate_protocol.rs
ocpp/src/server/: map_ocpp1_6_error_to_status.rs  mod.rs  ocpp_service.rs  start_server.rs
ocpp/tests/: authorize_test.rs  basic_auth_test.rs  data_transfer_test.rs  diagnostics_status_notification_test.rs  firmware_status_notification_test.rs  heart_beat_test.rs  meter_values_test.rs  ocpp_1_6_authorize_test.rs  ocpp_1_6_basic_auth_test.rs  ocpp_1_6_data_transfer_test.rs  ocpp_1_6_diagnostics_status_notification_test.rs  ocpp_1_6_firmware_status_notification_test.rs  ocpp_1_6_heart_beat_test.rs  ocpp_1_6_meter_values_test.rs  ocpp_1_6_remote_start_transaction_test.rs  ocpp_1_6_start_transaction_test.rs  ocpp_1_6_status_notification_test.rs  ocpp_1_6_stop_transaction_test.rs  remote_start_transaction_test.rs  setup_new_client.rs  start_transaction_test.rs  status_notification_test.rs  stop_transaction_test.rs
sdk/: Cargo.toml  build.rs
sdk/src/: lib.rs  ocpp_api_client.rs  start_client_server.rs
sdk/src/event/: event_payload.rs  evse_info.rs  mod.rs  sampled_value.rs  stopped_reason.rs  transaction_event.rs  transaction_event_trigger_reason.rs  transaction_event_type.rs  transaction_info.rs  transaction_started_event.rs
sdk/src/types/: charger.rs  charger_summary.rs  connector.rs  connector_status.rs  connector_type.rs  evse.rs  mod.rs  reboot_type.rs  rfid_scan_session.rs  rfid_scan_session_status.rs  transaction.rs
shared/: Cargo.toml
shared/src/: charger_data.rs  charger_settings.rs  configure_tracing.rs  connector_data.rs  connector_status.rs  connector_type.rs  data_store.rs  evse_data.rs  lib.rs  metric.rs  ocpp1_6_configuration.rs  outlet_data.rs  phase_metric.rs  sqlx_data_store.rs  status.rs  transaction.rs
shared/src/config/: amqp_config.rs  authorize_config.rs  client_config.rs  config.rs  mod.rs  ocpp_config.rs  read_config.rs
shared/src/data/: charger_connection_info.rs  charger_data.rs  charger_settings.rs  connector_data.rs  connector_status.rs  evse_data.rs  mod.rs  ocpp1_6_configuration.rs  phase_metric.rs  rfid_scan_session.rs
shared/src/data_store/: data_store.rs  mod.rs  mongo_data_store.rs
(+296 files in other folders)
