[workspace]
resolver = "2"
members = [
    "ocpp",
    "api",
    "shared",
    "sdk"
]

[workspace.package]
description = "A workspace for the OCPP CSMS server"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
repository = "https://github.com/flowionab/ocpp-csms-server"
license = "MIT OR Apache-2.0"
version = "0.1.31"
