[workspace]
resolver = "2"
members = [
    "ocpp",
    "api",
    "shared"
]

[workspace.package]
description = "A workspace for the OCPP CSMS server"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
repository = "https://github.com/flowionab/ocpp-csms-server"
license = "MIT OR Apache-2.0"
version = "0.2.0"
