[package]
edition = '2021'
name = "api"
version = "0.1.0"
publish = false

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
futures = "0.3"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
opentelemetry-otlp = "0.27.0"
tracing-opentelemetry = "0.28.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
async-trait = "0.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "derive", "macros"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tonic = "0.13.0"
prost = "0.13.3"
tonic-health = "0.13.0"
shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.13.0"


[dev-dependencies]
ocpp-client = { version = "0.1.14", features = ["test"] }