[package]
edition = '2024'
name = "api"
version.workspace = true
publish = false

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
async-trait = "0.1"
tonic = "0.14.3"
prost = "0.14.3"
tonic-prost = "0.14.3"
tonic-health = "0.14.3"
shared = { path = "../shared" }

[build-dependencies]
tonic-prost-build = "0.14.3"


[dev-dependencies]
ocpp-client = { version = "0.1.14", features = ["test"] }