[package]
edition = '2021'
name = "ocpp"
version = "0.1.9"
publish = false

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
rust-ocpp = { version = "2.0.0", features = ["v2_0_1", "v1_6"] }
tracing = "0.1"
futures = "0.3"
base64 = "0.22"
poem = { version = "3.1.5", features = ["websocket"] }
serde = "1.0"
serde_json = "1.0"
ocpp-client = "0.1.16"
chrono = "0.4"
async-trait = "0.1"
bcrypt = "0.16.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "derive", "macros"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
rand = "0.8.5"
hex = "0.4.3"
tonic = "0.12.3"
prost = "0.13.3"
tonic-health = "0.12.3"
shared = { path = "../shared" }
strum = "0.26.3"

[build-dependencies]
tonic-build = "0.12.3"


[dev-dependencies]
ocpp-client = { version = "0.1.16", features = ["test"] }