[package]
edition = '2024'
name = "ocpp"
version.workspace = true
publish = false

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
rust-ocpp = { version = "3.0.4", features = ["v2_0_1", "v1_6"] }
tracing = "0.1"
futures = "0.3"
base64 = "0.22"
poem = { version = "3.1.5", features = ["websocket"] }
serde = "1.0"
serde_json = "1.0"
ocpp-client = "0.1.16"
chrono = "0.4"
async-trait = "0.1"
bcrypt = "0.18.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
rand = "0.9.0"
hex = "0.4.3"
tonic = "0.14.3"
prost = "0.14.3"
tonic-prost = "0.14.3"
tonic-health = "0.14.3"
shared = { path = "../shared" }
strum = "0.27.1"
lapin = "2.5.3"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
prometheus = "0.14.0"
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.3"

[build-dependencies]
tonic-prost-build = "0.14.3"


[dev-dependencies]
ocpp-client = { version = "0.1.17", features = ["test"] }
mockall = "0.14.0"