[package]
edition = '2021'
name = "ocpp-csms-server-sdk"
publish = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ocpp", "csms"]

[dependencies]
futures = "0.3"
tonic = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = "0.13"