[package]
edition = '2024'
name = "ocpp-csms-server-sdk"
publish = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ocpp", "csms"]

[dependencies]
futures = "0.3"
tonic = "0.13"
prost = "0.13"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.44", features = ["signal"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13"