[package]
edition = '2024'
name = "shared"
version.workspace = true
publish = false

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
futures = "0.3"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = "0.4"
async-trait = "0.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "derive", "macros", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
opentelemetry-otlp = "0.27.0"
tracing-opentelemetry = "0.28.0"
rust-ocpp = { version = "3.0.0", features = ["v2_0_1", "v1_6"] }
toml = "0.8.19"
strum = { version = "0.27.1", features = ["derive"] }